--- a/index.html
+++ b/index.html
@@ -57,8 +57,6 @@
             <p>Baseada em fatos reais, esta série acompanha dois agentes do FBI que mergulham na mente de assassinos em série para entender seus padrões e prevenir futuros crimes. Inteligente, sombria e perturbadora, é um mergulho fascinante na psicologia criminal.</p>
             <a href="#" class="botao">ver mais</a>
         </div>
-      <!-- BOTÃO -->
-            <button>ver mais series</button>
     </div>
 
     <!-- MAIS SERIES (ESCONDIDAS) -->
@@ -85,6 +83,8 @@
             <a href="#" class="botao">ver mais</a>
         </div>
     </div>
+    <!-- BOTÃO -->
+    <button class="botao-ver-mais" onclick="mostrarMais()">Ver mais séries</button>
 
     <!-- FONTE DO GOOGLE-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
