--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h2>Expresso do amanha (snowpiercer)</h2>
             <img src="imagens/expresso-do-amanha.png" alt="capa da serie expresso do amanha" width="400">
             <p>Após o colapso climático que congelou o planeta, os últimos sobreviventes da humanidade vivem a bordo de um trem em movimento perpétuo. Mas dentro dos vagões, a luta de classes é brutal: os ricos vivem no luxo enquanto os pobres enfrentam miséria e repressão. Quando a revolução começa, cada vagão se torna um campo de batalha — e o futuro da humanidade depende de quem controla os trilhos. Uma distopia eletrizante sobre justiça, sobrevivência e o preço do progresso.</p>
-            <a href="#" class="botao">ver mais</a>
+            <a href="#" class="botao">Adcionar aos favoritos</a>
         </div>
 
       <!-- SERIE 2 -->
@@ -23,7 +23,7 @@
             <h2>The Walking Dead</h2>
             <img src="imagens/the-walking-dead.png" alt="capa da serie the walking dead" width="400" height="400">
             <p>Em um mundo devastado por um apocalipse zumbi, um grupo de sobreviventes liderado pelo ex-policial Rick Grimes luta não apenas contra os mortos-vivos, mas contra os próprios limites da humanidade. Cada decisão pode ser fatal, e a verdadeira ameaça pode estar nos vivos. Prepare-se para uma jornada intensa de sobrevivência, lealdade e sacrifício.</p>
-            <a href="#" class="botao">ver mais</a>
+            <a href="#" class="botao">Adcionar aos favoritos</a>
         </div>
 
       <!-- SERIE 3 -->
