--- a/index.html
+++ b/index.html
@@ -85,6 +85,11 @@
     </div>
     <!-- BOTÃO -->
     <button class="botao-ver-mais" onclick="mostrarMais()">Ver mais séries</button>
+    <!-- Favoritos -->
+    <div class="minha-lista">
+     <h2>Minha Lista</h2>
+     <div class="lista-series"></div>
+    </div>
 
     <!-- FONTE DO GOOGLE-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
