--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <h2>The Walking Dead</h2>
             <img src="imagens/the-walking-dead.png" alt="capa da serie the walking dead" width="400" height="400">
             <p>Em um mundo devastado por um apocalipse zumbi, um grupo de sobreviventes liderado pelo ex-policial Rick Grimes luta não apenas contra os mortos-vivos, mas contra os próprios limites da humanidade. Cada decisão pode ser fatal, e a verdadeira ameaça pode estar nos vivos. Prepare-se para uma jornada intensa de sobrevivência, lealdade e sacrifício.</p>
-            <a href="#" class="botao">Adcionar aos favoritos</a>
+            <a href="#" class="botao">Adcionar à lista</a>
         </div>
 
       <!-- SERIE 3 -->
@@ -55,7 +55,7 @@
             <h2>Mindhunter</h2>
             <img src="imagens/mindhunter.png" alt="capa da serie mindhunter" width="400" height="400">
             <p>Baseada em fatos reais, esta série acompanha dois agentes do FBI que mergulham na mente de assassinos em série para entender seus padrões e prevenir futuros crimes. Inteligente, sombria e perturbadora, é um mergulho fascinante na psicologia criminal.</p>
-            <a href="#" class="botao">Adcionar aos favoritos</a>
+            <a href="#" class="botao">Adcionar à lista</a>
         </div>
     </div>
 
