--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h2>Expresso do amanha (snowpiercer)</h2>
             <img src="imagens/expresso-do-amanha.png" alt="capa da serie expresso do amanha" width="400">
             <p>Após o colapso climático que congelou o planeta, os últimos sobreviventes da humanidade vivem a bordo de um trem em movimento perpétuo. Mas dentro dos vagões, a luta de classes é brutal: os ricos vivem no luxo enquanto os pobres enfrentam miséria e repressão. Quando a revolução começa, cada vagão se torna um campo de batalha — e o futuro da humanidade depende de quem controla os trilhos. Uma distopia eletrizante sobre justiça, sobrevivência e o preço do progresso.</p>
-            <a href="#" class="botao">Adcionar à lista</a>
+            <button class="botao botao-adicionar">Adicionar à lista</button>
         </div>
 
       <!-- SERIE 2 -->
@@ -23,7 +23,7 @@
             <h2>The Walking Dead</h2>
             <img src="imagens/the-walking-dead.png" alt="capa da serie the walking dead" width="400" height="400">
             <p>Em um mundo devastado por um apocalipse zumbi, um grupo de sobreviventes liderado pelo ex-policial Rick Grimes luta não apenas contra os mortos-vivos, mas contra os próprios limites da humanidade. Cada decisão pode ser fatal, e a verdadeira ameaça pode estar nos vivos. Prepare-se para uma jornada intensa de sobrevivência, lealdade e sacrifício.</p>
-            <a href="#" class="botao">Adcionar à lista</a>
+            <button class="botao botao-adicionar">Adicionar à lista</button>
         </div>
 
       <!-- SERIE 3 -->
@@ -31,7 +31,7 @@
             <h2>Uma advogada extraordinaria</h2>
             <img src="imagens/uma-advogada-extraordinaria.png" alt="capa da serie advogada extraordinaria" width="400" height="400">
             <p>Woo Young-woo é uma jovem advogada brilhante com autismo e uma memória fotográfica impressionante. Enquanto enfrenta os desafios do mundo jurídico e os preconceitos da sociedade, ela encanta com sua sensibilidade única e inteligência fora do comum. Uma série emocionante, leve e inspiradora que celebra a diversidade e a força da autenticidade.</p>
-            <a href="#" class="botao">Adcionar à lista</a>
+            <button class="botao botao-adicionar">Adicionar à lista</button>
         </div>
 
       <!-- SERIE 4 -->
@@ -39,7 +39,7 @@
             <h2>The 100</h2>
             <img src="imagens/the-100.png" alt="capa da serie the 100" width="400" height="400">
             <p>Após um apocalipse nuclear, cem jovens delinquentes são enviados de volta à Terra para testar sua habitabilidade. O que começa como uma missão de sobrevivência se transforma em uma luta épica por poder, identidade e redenção. Em um mundo sem regras, quem decide o que é certo?</p>
-            <a href="#" class="botao">Adcionar à lista</a>
+            <button class="botao botao-adicionar">Adicionar à lista</button>
         </div>
 
       <!-- SERIE 5 -->
@@ -47,7 +47,7 @@
             <h2>Round 6</h2>
             <img src="imagens/round-6.png" alt="capa da serie round 6" width="400" height="400">
             <p>456 pessoas endividadas são convidadas para participar de jogos infantis com um prêmio milionário. O problema? Quem perde... morre. Uma crítica feroz à desigualdade social, envolta em suspense, tensão psicológica e reviravoltas chocantes. Você jogaria?</p>
-            <a href="#" class="botao">Adcionar à lista</a>
+            <button class="botao botao-adicionar">Adicionar à lista</button>
         </div>
 
       <!-- SERIE 6 -->
@@ -55,7 +55,7 @@
             <h2>Mindhunter</h2>
             <img src="imagens/mindhunter.png" alt="capa da serie mindhunter" width="400" height="400">
             <p>Baseada em fatos reais, esta série acompanha dois agentes do FBI que mergulham na mente de assassinos em série para entender seus padrões e prevenir futuros crimes. Inteligente, sombria e perturbadora, é um mergulho fascinante na psicologia criminal.</p>
-            <a href="#" class="botao">Adcionar à lista</a>
+            <button class="botao botao-adicionar">Adicionar à lista</button>
         </div>
     </div>
 
@@ -73,14 +73,14 @@
             <h2>Dark</h2>
             <img src="imagens/dark.png" alt="capa da serie Dark" width="400" height="400">
             <p>Quando duas crianças desaparecem em uma pequena cidade alemã, segredos sombrios começam a emergir — incluindo viagens no tempo, laços familiares complexos e um ciclo de eventos que se repete há gerações. Dark é um quebra-cabeça cerebral e sombrio que desafia a lógica e prende do início ao fim. Nada é o que parece, e cada episódio revela uma nova camada de mistério.</p>
-            <a href="#" class="botao">Adcionar à lista</a>
+            <button class="botao botao-adicionar">Adicionar à lista</button>
         </div>
     <!-- SERIE 9 -->
         <div class="serie">
             <h2>The crown</h2>
             <img src="imagens/the-crown.png" alt="capa da serie The crown" width="400" height="400">
             <p>A série acompanha a vida da Rainha Elizabeth II desde sua ascensão ao trono, revelando os bastidores da monarquia britânica com elegância, drama e profundidade emocional. Com atuações impecáveis e cenários deslumbrantes, The Crown é um retrato fascinante do poder, da tradição e dos dilemas pessoais por trás da realeza.</p>
-            <a href="#" class="botao">Adcionar à lista</a>
+            <button class="botao botao-adicionar">Adicionar à lista</button>
         </div>
     </div>
     <!-- BOTÃO -->
