--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         </div>
     </div>
     <!-- BOTÃO -->
-    <button class="botao-ver-mais" onclick="mostrarMais()">Ver mais séries</button>
+    <button id="botao-ver-mais" class="botao">ver mais séries</button>
     <!-- Botão flutuante para abrir o modal -->
     <button id="abrir-modal" class="botao-modal">📋 Ver Lista</button>
 
