--- a/index.html
+++ b/index.html
@@ -84,7 +84,9 @@
         </div>
     </div>
     <!-- BOTÃO -->
-    <button id="botao-ver-mais" class="botao">ver mais séries</button>
+    <div class="botao-centralizado">
+       <button id="botao-ver-mais" class="botao">ver mais séries</button>
+    </div>
     <!-- Botão flutuante para abrir o modal -->
     <button id="abrir-modal" class="botao-modal">📋 Ver Lista</button>
 
