--- a/index.html
+++ b/index.html
@@ -86,7 +86,197 @@
             <p>A série acompanha a vida da Rainha Elizabeth II desde sua ascensão ao trono, revelando os bastidores da monarquia britânica com elegância, drama e profundidade emocional. Com atuações impecáveis e cenários deslumbrantes, The Crown é um retrato fascinante do poder, da tradição e dos dilemas pessoais por trás da realeza.</p>
             <button class="botao botao-adicionar">Adicionar à lista</button>
         </div>
+    <!-- SERIE 10 -->
+        <div class="serie">
+            <h2>Sherlock</h2>
+            <img src="imagens/sherlock.png" alt="capa da serie Sherlock" width="400" height="400">
+            <p>O detetive mais excêntrico de Londres está de volta em uma releitura moderna e eletrizante. Com inteligência afiada e métodos nada convencionais, Sherlock Holmes e seu fiel parceiro Watson desvendam crimes complexos enquanto enfrentam inimigos geniais. Mistério, sarcasmo e reviravoltas em cada episódio.</p>
+            <button class="botao botao-adicionar">Adicionar à lista</button>
+        </div>
+    <!-- SERIE 11 -->
+        <div class="serie">
+            <h2>Breaking bead</h2>
+            <img src="imagens/breaking-bead.png" alt="capa da serie Breaking bead" width="400" height="400">
+            <p>Quando um professor de química descobre que tem câncer terminal, ele decide fabricar metanfetamina para garantir o futuro da família. Mas o que começa como um plano desesperado se transforma em uma jornada sombria de poder, crime e moralidade. Uma obra-prima sobre a transformação humana.</p>
+            <button class="botao botao-adicionar">Adicionar à lista</button>
+        </div>
+    <!-- SERIE 12 -->
+        <div class="serie">
+            <h2>Stranger things</h2>
+            <img src="imagens/stranger-things.png" alt="capa da serie Stranger things" width="400" height="400">
+            <p>Em uma cidade pequena dos anos 80, o desaparecimento de um garoto revela segredos sobrenaturais, experimentos secretos e uma garota com poderes incríveis. Com clima nostálgico, suspense e amizade verdadeira, Stranger Things é uma aventura que mistura ficção científica e terror com coração</p>
+            <button class="botao botao-adicionar">Adicionar à lista</button>
+        </div>
+    <!-- SERIE 13 -->
+        <div class="serie">
+            <h2>Mr. robot</h2>
+            <img src="imagens/mr-robot.png" alt="capa da serie Mr. robot" width="400" height="400">
+            <p>Elliot é um hacker genial e socialmente isolado que se vê envolvido em uma conspiração global para derrubar corporações corruptas. Mas sua mente instável torna tudo mais perigoso. Um thriller psicológico intenso, cheio de reviravoltas e reflexões sobre tecnologia, controle e identidade.</p>
+            <button class="botao botao-adicionar">Adicionar à lista</button>
+        </div>
+    <!-- SERIE 14 -->     
+        <div class="serie">
+            <h2>Suits</h2>
+            <img src="imagens/suits.png" alt="capa da serie Suits" width="400" height="400">
+            <p>Harvey Specter é um dos advogados mais brilhantes de Nova York e decide contratar Mike Ross, um jovem com memória fotográfica, mas sem diploma de direito. Juntos, enfrentam casos complexos e jogos de poder em um escritório onde estilo, inteligência e ética se chocam. Um drama jurídico com ritmo acelerado e personagens carismáticos.</p>
+            <button class="botao botao-adicionar">Adicionar à lista</button>
+        </div>
+    <!-- SERIE 15 --> 
+        <div class="serie">
+            <h2>Stranger Things</h2>
+            <img src="imagens/stranger-things.png" alt="capa da serie Stranger Things" width="400" height="400">
+            <p>Em uma pequena cidade, o desaparecimento de um garoto desencadeia eventos sobrenaturais envolvendo uma garota com poderes e um mundo paralelo.</p>
+            <button class="botao botao-adicionar">Adicionar à lista</button>
+        </div>
+    <!-- SERIE 16 --> 
+        <div class="serie">
+            <h2>Game of Thrones</h2>
+            <img src="imagens/game-of-thrones.png" alt="capa da serie Game of Thrones" width="400" height="400">
+            <p>Famílias nobres batalham pelo controle dos Sete Reinos, enquanto forças antigas retornam ameaçando toda a humanidade.</p>
+            <button class="botao botao-adicionar">Adicionar à lista</button>
+        </div>
+    <!-- SERIE 17 --> 
+        <div class="serie">
+            <h2>Peaky Blinders</h2>
+            <img src="imagens/peaky-blinders.png" alt="capa da serie Peaky Blinders" width="400" height="400">
+            <p>Após a Primeira Guerra Mundial, uma gangue liderada por Tommy Shelby tenta expandir seu império criminoso na Inglaterra.</p>
+            <button class="botao botao-adicionar">Adicionar à lista</button>
+        </div>
+    <!-- SERIE 18 --> 
+        <div class="serie">
+            <h2>Vikings</h2>
+            <img src="imagens/vikings.png" alt="capa da serie Vikings" width="400" height="400">
+            <p>A história de Ragnar Lothbrok, um herói lendário que desafia os deuses em busca de conquistas e glória.</p>
+            <button class="botao botao-adicionar">Adicionar à lista</button>
+        </div>
+    <!-- SERIE 19 --> 
+        <div class="serie">
+            <h2>Narcos</h2>
+            <img src="imagens/narcos.png" alt="capa da serie Narcos" width="400" height="400">
+            <p>A ascensão e queda de Pablo Escobar e o impacto do narcotráfico na Colômbia, contada sob o ponto de vista da DEA.</p>
+            <button class="botao botao-adicionar">Adicionar à lista</button>
+        </div>
+    <!-- SERIE 20 --> 
+        <div class="serie">
+            <h2>The Mandalorian</h2>
+            <img src="imagens/the-mandalorian.png" alt="capa da serie The Mandalorian" width="400" height="400">
+            <p>Um caçador de recompensas enfrenta novos desafios ao proteger uma misteriosa criança sensível à Força.</p>
+            <button class="botao botao-adicionar">Adicionar à lista</button>
+        </div>
+    <!-- SERIE 21 --> 
+        <div class="serie">
+            <h2>House of the Dragon</h2>
+            <img src="imagens/house-of-the-dragon.png" alt="capa da serie House of the Dragon" width="400" height="400">
+            <p>A guerra interna da Casa Targaryen ameaça destruir Westeros décadas antes dos eventos de Game of Thrones.</p>
+            <button class="botao botao-adicionar">Adicionar à lista</button>
+        </div>
+    <!-- SERIE 22 --> 
+        <div class="serie">
+            <h2>The Boys</h2>
+            <img src="imagens/the-boys.png" alt="capa da serie The Boys" width="400" height="400">
+            <p>Quando super-heróis abusam de seus poderes, um grupo clandestino decide enfrentá-los com métodos nada convencionais.</p>
+            <button class="botao botao-adicionar">Adicionar à lista</button>
+        </div>
+    <!-- SERIE 23 --> 
+        <div class="serie">
+            <h2>WandaVision</h2>
+            <img src="imagens/wandavision.png" alt="capa da serie WandaVision" width="400" height="400">
+            <p>Wanda e Visão vivem uma vida ideal em formato de sitcom, até que eventos estranhos revelam uma realidade distorcida.</p>
+            <button class="botao botao-adicionar">Adicionar à lista</button>
+        </div>
+    <!-- SERIE 24 --> 
+        <div class="serie">
+            <h2>Loki</h2>
+            <img src="imagens/loki.png" alt="capa da serie Loki" width="400" height="400">
+            <p>Loki é recrutado por uma agência do tempo para corrigir falhas na linha temporal causadas por suas próprias ações.</p>
+            <button class="botao botao-adicionar">Adicionar à lista</button>
+        </div>
+    <!-- SERIE 25 --> 
+        <div class="serie">
+            <h2>Dexter</h2>
+            <img src="imagens/dexter.png" alt="capa da serie Dexter" width="400" height="400">
+            <p>Um analista forense de dia e assassino de criminosos à noite, Dexter vive um jogo perigoso com a justiça e sua consciência.</p>
+            <button class="botao botao-adicionar">Adicionar à lista</button>
+        </div>
+    <!-- SERIE 26 --> 
+        <div class="serie">
+            <h2>Lost</h2>
+            <img src="imagens/lost.png" alt="capa da serie Lost" width="400" height="400">
+            <p>Sobreviventes de um acidente aéreo enfrentam desafios sobrenaturais em uma ilha misteriosa e cheia de segredos.</p>
+            <button class="botao botao-adicionar">Adicionar à lista</button>
+        </div>
+    <!-- SERIE 27 --> 
+        <div class="serie">
+            <h2>Better Call Saul</h2>
+            <img src="imagens/better-call-saul.png" alt="capa da serie Better Call Saul" width="400" height="400">
+            <p>Jimmy McGill trilha o caminho que o levará a se tornar o controverso advogado Saul Goodman no universo de Breaking Bad.</p>
+            <button class="botao botao-adicionar">Adicionar à lista</button>
+        </div>
+    <!-- SERIE 28 --> 
+        <div class="serie">
+            <h2>Black Mirror</h2>
+            <img src="imagens/black-mirror.png" alt="capa da serie Black Mirror" width="400" height="400">
+            <p>Uma série de histórias independentes que exploram os perigos da tecnologia em cenários distópicos e provocativos.</p>
+            <button class="botao botao-adicionar">Adicionar à lista</button>
+        </div>
+    <!-- SERIE 29 --> 
+        <div class="serie">
+            <h2>Arcane</h2>
+            <img src="imagens/arcane.png" alt="capa da serie Arcane" width="400" height="400">
+            <p>Inspirada no universo de League of Legends, a série mostra o conflito entre irmãs em cidades rivais: Piltover e Zaun.</p>
+            <button class="botao botao-adicionar">Adicionar à lista</button>
+        </div>
+    <!-- SERIE 30 --> 
+        <div class="serie">
+            <h2>La Casa de Papel</h2>
+            <img src="imagens/la-casa-de-papel.png" alt="capa da serie La Casa de Papel" width="400" height="400">
+            <p>Um grupo de criminosos, liderado pelo Professor, executa o maior assalto da história à Casa da Moeda da Espanha.</p>
+            <button class="botao botao-adicionar">Adicionar à lista</button>
+        </div>
+    <!-- SERIE 31 --> 
+        <div class="serie">
+            <h2>Prison Break</h2>
+            <img src="imagens/prison-break.png" alt="capa da serie Prison Break" width="400" height="400">
+            <p>Um engenheiro elabora um plano complexo para tirar seu irmão da prisão, onde ele foi condenado injustamente.</p>
+            <button class="botao botao-adicionar">Adicionar à lista</button>
+        </div>
+    <!-- SERIE 32 --> 
+        <div class="serie">
+            <h2>Lucifer</h2>
+            <img src="imagens/lucifer.png" alt="capa da serie Lucifer" width="400" height="400">
+            <p>Cansado do inferno, Lúcifer abandona seu trono e passa a viver entre os humanos, resolvendo crimes em Los Angeles.</p>
+            <button class="botao botao-adicionar">Adicionar à lista</button>
+            </div>
+    <!-- SERIE 33 --> 
+        <div class="serie">
+            <h2>How I Met Your Mother</h2>
+            <img src="imagens/how-i-met-your-mother.png" alt="capa da serie How I Met Your Mother" width="400" height="400">
+            <p>Ted conta a seus filhos como conheceu sua mãe, relembrando histórias divertidas com seus amigos em Nova York.</p>
+            <button class="botao botao-adicionar">Adicionar à lista</button>
+        </div>
+    <!-- SERIE 34 -->
+        <div class="serie">
+            <h2>The Office</h2>
+            <img src="imagens/the-office.png" alt="capa da serie The Office" width="400" height="400">
+            <p>Uma sátira sobre o ambiente de trabalho em um escritório de papel, repleto de personagens excêntricos e situações hilárias.</p>
+            <button class="botao botao-adicionar">Adicionar à lista</button>
+        </div>
+    <!-- SERIE 35 -->
+        <div class="serie">
+            <h2>Sutura</h2>
+            <img src="imagens/sutura.png" alt="capa da serie Sutura" width="400" height="400">
+            <p>"Sutura" é uma série médica brasileira ambientada em um hospital público de emergência em São Paulo. A trama gira em torno dos dilemas enfrentados por jovens médicos residentes que lidam diariamente com a pressão de salvar vidas, a precariedade do sistema de saúde e seus conflitos pessoais. Misturando drama intenso e questões sociais, a série traz uma perspectiva brasileira autêntica da realidade dos profissionais da saúde, revelando histórias impactantes que vão além dos corredores hospitalares.</p>
+            <button class="botao botao-adicionar">Adicionar à lista</button>
+        </div>
+    <!-- SERIE 35 -->
+        <div class="serie">
+            <h2>Sintonia</h2>
+            <img src="imagens/sintonia.png" alt="capa da serie Sintonia" width="400" height="400">
+            <p>A série acompanha a vida de três amigos de infância — Doni, Nando e Rita — que cresceram juntos na periferia de São Paulo. Cada um segue um caminho diferente: Doni sonha em ser um grande funkeiro, Nando entra para o mundo do crime, e Rita se aproxima da religião evangélica. Apesar de suas escolhas distintas, eles continuam conectados pelos laços da amizade, enfrentando os desafios da juventude, do amor e da sobrevivência nas favelas. "Sintonia" mostra de forma crua e realista a interseção entre música, crime e fé.</p>
+            <button class="botao botao-adicionar">Adicionar à lista</button>
+        </div>
     </div>
+    
     <!-- BOTÃO -->
     <div class="botao-centralizado">
        <button id="botao-ver-mais" class="botao">ver mais séries</button>
@@ -94,7 +284,7 @@
     <!-- Botão flutuante para abrir o modal -->
     <button id="abrir-modal" class="botao-modal">📋 Ver Lista</button>
 
-   <!-- Modal -->
+    <!-- Modal -->
     <div id="modal-lista" class="modal">
       <div class="modal-conteudo">
        <span id="fechar-modal" class="fechar">&times;</span>
